### fixed typo (HEAD -> main)
>Wed, 24 Mar 2021 10:10:28 -0500

>Author: Tyson Littenberg (tyson.littenberg@ligo.org)

>Commiter: Tyson Littenberg (tyson.littenberg@ligo.org)




### update documentation describng GWcatalog(s) tools
>Wed, 24 Mar 2021 10:06:56 -0500

>Author: Tyson Littenberg (tyson.littenberg@ligo.org)

>Commiter: Tyson Littenberg (tyson.littenberg@ligo.org)




### Update README.md (origin/main, origin/HEAD)
>Wed, 24 Mar 2021 09:17:05 -0500

>Author: Tyson Littenberg (tyson.b.littenberg@gmail.com)

>Commiter: GitHub (noreply@github.com)




### update to ucb parameter tables example
>Tue, 23 Mar 2021 15:33:29 -0500

>Author: Tyson Littenberg (tyson.littenberg@ligo.org)

>Commiter: Tyson Littenberg (tyson.littenberg@ligo.org)




### Fix the bug related to cache
>Tue, 23 Mar 2021 18:48:49 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### update gallery
>Mon, 22 Mar 2021 12:28:50 -0500

>Author: Tyson Littenberg (tyson.littenberg@ligo.org)

>Commiter: Tyson Littenberg (tyson.littenberg@ligo.org)




### expanding source table example to demo GWCatalogs
>Mon, 22 Mar 2021 12:23:59 -0500

>Author: Tyson Littenberg (tyson.littenberg@ligo.org)

>Commiter: Tyson Littenberg (tyson.littenberg@ligo.org)




### Add extra_directories option to load catalogs Add tests for plugin creation Add documentation
>Sun, 21 Mar 2021 08:13:02 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Cleaning
>Thu, 18 Mar 2021 12:57:59 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Rename the enumerate LISA to MBH
>Thu, 18 Mar 2021 12:54:15 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
