@@ -1,4 +1,14 @@
-### fixed typo (HEAD -> main)
+### renaming *source_sample to *source_samples (HEAD -> main)
+>Wed, 24 Mar 2021 10:55:45 -0500
+
+>Author: Tyson Littenberg (tyson.littenberg@ligo.org)
+
+>Commiter: Tyson Littenberg (tyson.littenberg@ligo.org)
+
+
+
+
+### fixed typo
 >Wed, 24 Mar 2021 10:10:28 -0500
 
 >Author: Tyson Littenberg (tyson.littenberg@ligo.org)
